Updated styling on individual forum posts to a lighter theme for a better visual appeal. Additionally, fixed random spacing between form items in forum_post's comment section and forum_create_post by removing linebreak characters.

--- a/static/css/forum_post.css
+++ b/static/css/forum_post.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: #111;
+    background: #222;
     color: #eee;
     margin: 0;
     padding: 0;
@@ -32,7 +32,7 @@ body {
 }
 
 .post-container {
-    background: #1e1e1e;
+    background: #353535;
     margin: 1rem auto;
     max-width: 1000px;
     padding: 2rem;
@@ -41,10 +41,12 @@ body {
     display: flex;
     flex-direction: column;
     text-align: left;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 }
 
 h1,
-.author {
+.author,
+h2 {
     color: #00ff88;
     font-weight: bold;
 }
@@ -57,7 +59,7 @@ h1,
     padding: 0.6rem 1rem; /* Padding for buttons */
     font-size: 1rem; /* Font size for buttons */
     font-weight: bold;
-    color: #111;
+    color: #2a2a2a;
     background-color: #00ff88;
     border: none;
     border-radius: 5px;
@@ -80,20 +82,21 @@ h1,
 .comment-form {
     margin-top: 1rem;
     padding: 1rem;
-    background: #1e1e1e;
+    background: #353535;
     border-radius: 8px;
-    gap: 1rem;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 }
 
 .comment-form label{
     font-family: Arial, sans-serif;
     font-weight: bold;
+    font-size: 1rem;
+    color:#eee;
 }
 
 form .row {
     display: flex;
     flex-direction: column;
-    margin-bottom: 0.5rem;
 }
 
 .input-field {
@@ -101,7 +104,7 @@ form .row {
     padding: 0.8rem; /* Padding inside input fields */
     border: 1px solid #333;
     border-radius: 5px;
-    background-color: #2a2a2a;
+    background-color: #3e3e3e;
     color: #fff;
     font-size: 0.9rem; /* Font size for inputs */
     box-sizing: border-box; /* Include padding and border in element's total width and height */
@@ -111,7 +114,7 @@ form .row {
     max-width: 1200px;
     margin: 1.5rem auto;
     padding: 2rem;
-    background-color: #1e1e1e;
+    background-color: #353535;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
     text-align: left;
